direction support for pipelines

--- a/vision/tools/jupyter_notebooks/partial trees.ipynb
+++ b/vision/tools/jupyter_notebooks/partial trees.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c256030e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current working directory: /home/fruitspec-lab/FruitSpec/Code/roi/fsCounter\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "new_directory = '/home/fruitspec-lab/FruitSpec/Code/roi/fsCounter'\n",
@@ -16,10 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aa1504a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fruitspec-lab/anaconda3/envs/FsCounter/lib/python3.8/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "from MHS.F_model_training import *\n",
     "from vision.misc.help_func import go_up_n_levels\n",
@@ -41,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5c97ac57",
    "metadata": {},
    "outputs": [],
@@ -182,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d1dc5121",
    "metadata": {},
    "outputs": [],
@@ -406,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60cb8faf",
+   "id": "199952f4",
    "metadata": {
     "scrolled": true
    },
