--- a/vision/tools/jupyter_notebooks/Factor_analysis.ipynb
+++ b/vision/tools/jupyter_notebooks/Factor_analysis.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bad683bf-f6bf-4d99-bb8b-89390921acb3",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "705d358a-6339-44f9-966c-2b5517a0619d",
    "metadata": {},
    "outputs": [],
@@ -114,12 +114,12 @@
     "    block_col += ['dcv1', 'dcv2', 'dcv3', 'dcv4', 'dcv5']\n",
     "    new_df = pd.DataFrame(new_data, columns=block_col)\n",
     "\n",
-    "    return new_df "
+    "    return new_df    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c40847fd-1b79-4ed2-bcf2-82784c2538e8",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "752d02c4-e805-43c1-a90e-31bcd5109247",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3e849c86-1b9c-4722-b3e6-605d9155edc3",
    "metadata": {},
    "outputs": [],
@@ -172,161 +172,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "ce990442-d4d6-45d3-aebd-9773c4d6aaca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_path = \"/home/fruitspec-lab-3/FruitSpec/Data/grapes/SAXXXX/counting/data_meta.csv\""
+    "metadata_path = \"/media/matans/My Book/FruitSpec/Apples_SA/data_meta.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "94c74ef6-5e1b-44a5-ba63-79be90553042",
    "metadata": {},
    "outputs": [],
    "source": [
-    "block_path = \"/home/fruitspec-lab-3/FruitSpec/Data/grapes/SAXXXX/5XXXXXX2\"\n",
-    "block_ = '5XXXXXX2'\n",
+    "block_path = \"/media/matans/My Book/FruitSpec/Apples_SA/block_13\"\n",
+    "block_ = 'Block_13'\n",
     "block_13_df, row_tracks_13 = block_analysis(block_path, metadata_path, block_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "dd58aea2-f5e4-4d80-9ac3-d918fd752cf9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>block</th>\n",
-       "      <th>row</th>\n",
-       "      <th>tree</th>\n",
-       "      <th>tree_id</th>\n",
-       "      <th>F</th>\n",
-       "      <th>cv1</th>\n",
-       "      <th>cv2</th>\n",
-       "      <th>cv3</th>\n",
-       "      <th>F/cv1</th>\n",
-       "      <th>dcv1</th>\n",
-       "      <th>dcv2</th>\n",
-       "      <th>dcv3</th>\n",
-       "      <th>dcv4</th>\n",
-       "      <th>dcv5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5XXXXXX2</td>\n",
-       "      <td>row_1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>150</td>\n",
-       "      <td>255</td>\n",
-       "      <td>207</td>\n",
-       "      <td>187</td>\n",
-       "      <td>0.588235</td>\n",
-       "      <td>213</td>\n",
-       "      <td>170</td>\n",
-       "      <td>145</td>\n",
-       "      <td>132</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5XXXXXX2</td>\n",
-       "      <td>row_2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>150</td>\n",
-       "      <td>194</td>\n",
-       "      <td>167</td>\n",
-       "      <td>139</td>\n",
-       "      <td>0.773196</td>\n",
-       "      <td>161</td>\n",
-       "      <td>137</td>\n",
-       "      <td>119</td>\n",
-       "      <td>110</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5XXXXXX2</td>\n",
-       "      <td>row_4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>209</td>\n",
-       "      <td>171</td>\n",
-       "      <td>141</td>\n",
-       "      <td>0.622010</td>\n",
-       "      <td>173</td>\n",
-       "      <td>135</td>\n",
-       "      <td>116</td>\n",
-       "      <td>98</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5XXXXXX2</td>\n",
-       "      <td>row_5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>179</td>\n",
-       "      <td>132</td>\n",
-       "      <td>107</td>\n",
-       "      <td>0.726257</td>\n",
-       "      <td>163</td>\n",
-       "      <td>123</td>\n",
-       "      <td>99</td>\n",
-       "      <td>85</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      block    row  tree  tree_id    F  cv1  cv2  cv3     F/cv1  dcv1  dcv2  \\\n",
-       "0  5XXXXXX2  row_1     1        1  150  255  207  187  0.588235   213   170   \n",
-       "1  5XXXXXX2  row_2     1        1  150  194  167  139  0.773196   161   137   \n",
-       "2  5XXXXXX2  row_4     2        1  130  209  171  141  0.622010   173   135   \n",
-       "3  5XXXXXX2  row_5     2        1  130  179  132  107  0.726257   163   123   \n",
-       "\n",
-       "   dcv3  dcv4  dcv5  \n",
-       "0   145   132   117  \n",
-       "1   119   110    92  \n",
-       "2   116    98    87  \n",
-       "3    99    85    68  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "block_13_df"
    ]
@@ -338,10 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row_to_drow = 'row_1'\n",
-    "tree_id = 1\n",
-    "date = '281123'\n",
-    "draw_tree_bb_from_tracks(row_tracks_13[row_to_drow][tree_id], os.path.join(block_path, date, row_to_drow, '1'), tree_id)"
+    "#row_to_drow = 'row_8888'\n",
+    "#tree_id = 2\n",
+    "#draw_tree_bb_from_tracks(row_tracks[row_to_drow][tree_id], os.path.join(block_path, row_to_drow, '1'), tree_id)"
    ]
   },
   {
@@ -1696,7 +1566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
